
- Fixed problem with table columns in the file system browser resizing
  incorrectly when a node was collapsed.

- Redoing a remove did not clear the buffer's modified flag if
  necessary.

- Fixed status bar display for prefixes longer than three keys.

- Pressing TAB in the action bar on JDK 1.3 would cause it to lose
  focus.

- Glob patterns containing + caused exceptions to be thrown.

}}}
{{{ API Changes

- TokenHandler.handleToken() method now takes a Segment instance as
  the first parameter.

- Direct construction of SearchDialog no longer possible due to internal
  changes. The SearchDialog.showSearchDialog() method that has been
  recommended since jEdit 4.0 still works.

- Buffer.setReadOnly() can be used to make a buffer read only even if
  the file is writable on disk.

- Added JEditTextArea.addTopComponent() method (Brad Mace).

- Case-sensitivity is now determined on a per-filesystem basis, instead
  of always being on when running on Windows or MacOS X. To have your
  VFS be case-insensitive, define the CASE_INSENSITIVE_CAP.

- Added generic structure matching API for presenting the user a
  consistent interface for bracket matching, XML tag matching, BEGIN/END
  matching, etc.

  Simply write an implementation of StructureMatcher and add it to the
  text area with JEditTextArea.addStructureMatcher().

}}}

}}}

{{{ Version 4.2pre2

Thanks to Carmine Lucarelli, Matt Albrecht, Ollie Rutherfurd and
Sebastien Pierre for contributing to this release.

{{{ Editing

- "Complete Word" now inserts the longest common prefix if there is more
  than one possible completion (the popup is still displayed as well).

- Added Ignore Case (C+e C+i) and Regular Expressions (C+e C+x) commands
  to Search menu for changing search bar settings from the keyboard.

- Incremental Search Bar and HyperSearch Bar commands now always
  disregard the selection. Use Incremental Search for Word and
  HyperSearch for Word commands if you want to search for the selected
  text.
